# lab06

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  README.md
.github/workflows/: cpack.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
